--- a/res/values/colours.xml
+++ b/res/values/colours.xml
@@ -2,12 +2,12 @@
 <resources>
     
     <!-- supItem Row -->
-    <color name="row_reason_text">#000000</color>
-    <color name="row_amount_text">#8d8d8d</color>
-    <color name="row_off_background">#ffe8c5</color>
+    <color name="row_label_text">#000000</color>
+    <color name="row_value_text">#b7b7b7</color>
+    <color name="row_off_background">#dbdcdd</color>
     
     <!--  supItem dialog -->
-    <color name="dialog_title">#ffbb33</color>
-    <color name="dialog_title_separator">#ffbb33</color>
+    <color name="dialog_title">#717171</color>
+    <color name="dialog_title_separator">#717171</color>
     
 </resources>
