--- a/res/layout/supitem.xml
+++ b/res/layout/supitem.xml
@@ -21,7 +21,8 @@
             android:gravity="center_horizontal"
             android:text="@string/default_label"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/row_label_text" />
+            android:textColor="@color/row_label_text"
+            android:textStyle="bold" />
 
         <RelativeLayout
             android:layout_width="fill_parent"
